--- a/style.css
+++ b/style.css
@@ -1,14 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@600&family=Titillium+Web:ital,wght@1,700&display=swap');
 
 body {
-    background-image: url(df4e8ba28f912bf9cdf9fa0dfc196411.png);
+    background-image: url(./images/df4e8ba28f912bf9cdf9fa0dfc196411.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-/* main {
-    margin: 0 auto;
-} */
+.pokeball {
+    width: 100px;
+    clear: none;
+}
+
+.title {
+    font-family: 'Titillium Web', sans-serif;
+    text-transform: capitalize;
+    font-size: 60px;
+    color: #e0e0e0;
+    text-shadow: 2px 2px #00000085;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 button {
     border: 4px solid #0000003b;
@@ -26,5 +38,8 @@ button {
     margin-left: auto;
     margin-right: auto;
     width: 320px;
-    margin-top: 100px;
+}
+
+.relative {
+    position: absolute;
 }
