--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@600&family=Titillium+Web:ital,wght@1,700&display=swap');
 
 body {
-    background-image: url(./images/df4e8ba28f912bf9cdf9fa0dfc196411.png);
+    background-image: url(./images/wallpaper.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -15,19 +15,29 @@ body {
     font-family: 'Titillium Web', sans-serif;
     text-transform: capitalize;
     font-size: 60px;
-    color: #e0e0e0;
-    text-shadow: 2px 2px #00000085;
+    color: #ffffff;
+    text-shadow: 2px 2px #0000001a;
     text-align: center;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
-button {
-    border: 4px solid #0000003b;
-    border-radius: 10px;
-    height: 100px;
-    width: 100px;
-    background-color: #ffffff70;
+.game-result {
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 60px;
+    color: #ff5d6b;
+    text-shadow: 2px 2px #00000070;
+    position: fixed;
+    z-index: 1000;
+    background-color: #ffffff;
+    padding: 0 586px;
+    margin-top: 100px;
+}
+
+.restart {
+    padding: 3px 20px;
+    margin: 0 672px;
+    text-transform: capitalize;
 }
 
 .boxes {
@@ -38,12 +48,58 @@ button {
     margin-left: auto;
     margin-right: auto;
     width: 320px;
+    margin-top: 20px;
+}
+
+.box {
+    border-radius: 10px;
+    border: 4px solid #44444400;
+    height: 100px;
+    width: 100px;
+    background-color: #ffffff70;
 }
 
 .relative {
     position: absolute;
 }
 
-.red {
-    background-color: red;
+.design {
+    color: white;
+    font-size: 50px;
+    font-weight: bold;
+    text-shadow: 2px 2px #0000001a;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.carousel-inner img {
+    border: 10px solid #ffffff96;
+    border-radius: 10px;
+    padding: 25px;
+    margin: 0 auto;
+}
+
+.carousel-inner {
+    margin-top: 25px;
+}
+
+h2 {
+    font-family: 'Titillium Web', sans-serif;
+    text-transform: capitalize;
+    text-align: center;
+    color: #ffffff;
+    text-shadow: 2px 2px #0000001a;
+    font-size: 50px;
+}
+
+p {
+    font-family: 'Titillium Web', sans-serif;
+    text-transform: capitalize;
+    text-align: center;
+    color: #ffffff;
+    text-shadow: 2px 2px #0000001a;
+    font-size: 40px;
 }
